--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         </activity>
         <activity android:name=".ViewPropertyTest"/>
         <activity android:name=".MeasuedViewActivity"/>
+        <activity android:name=".MScrollViewActivity"/>
     </application>
 
 </manifest>
