新增自定义ViewGroup实现滑动 事件分发测试

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".ViewPropertyTest"/>
         <activity android:name=".MeasuedViewActivity"/>
         <activity android:name=".MScrollViewActivity"/>
+        <activity android:name=".EventDispatchActivity"/>
     </application>
 
 </manifest>
