--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.basepractice">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -23,6 +23,8 @@
         <activity android:name=".ViewXYActivity" />
         <activity android:name=".MScrollViewImpl" />
         <activity android:name=".ValueAnimator" />
+        <activity android:name=".VolleyTestActivity" />
+        <activity android:name=".AndroidDrawTest"/>
     </application>
 
 </manifest>
