--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".AndroidDrawTest"/>
         <activity android:name=".ViewFocusTest"/>
         <activity android:name=".HandlerDemo"/>
+        <activity android:name=".ViewSpeakAnimation"/>
     </application>
 
 </manifest>
