增加圆形进度条

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
         <activity
             android:name=".KeyboardActivity"
             android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".CircleProgressBarActivity"/>
 
         <service
             android:name=".MessengerService"
