--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity android:name=".ViewSpeakAnimation" />
         <activity android:name=".MessengerTest"/>
         <activity android:name=".AndroidViewTest"/>
+        <activity android:name=".FrameLayoutTest"/>
 
         <service
             android:name=".MessengerService"
